# OpenLIFU-python

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  2  20251203_122346_run_log.txt  DemoApplication.py  Demo_Notebook.ipynb  LICENSE  M2.json  M4_flex.json  README.md  README.rst  __init__.py  activate_openlifu_venv.sh  db_dvc.dvc  environment_pyfus.yml  hv_controller_api.md  noxfile.py  pinmap.json  pyproject.toml  requirements.txt  tx_device_api.md  vf-scratchwork.py  viz.py
.dvc/: config
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml
OpenLIFU_Database_DCVA/: README.md
OpenLIFU_Database_DCVA/protocols/: protocols.json
OpenLIFU_Database_DCVA/protocols/neuromod_demo/: neuromod_demo.json
OpenLIFU_Database_DCVA/subjects/: subjects.json
OpenLIFU_Database_DCVA/subjects/ow_ex001/: ow_ex001.json
OpenLIFU_Database_DCVA/transducers/: transducers.json
OpenLIFU_Database_DCVA/transducers/openlifu_2x400_evt1_002/: openlifu_2x400_evt1_002.json
OpenLIFU_Database_DCVA/users/: users.json
OpenLIFU_Database_DCVA/users/openwater/: openwater.json
OpenLIFU_Database_DCVA/users/openwater_admin/: openwater_admin.json
docs/: LIFU_Interface_api.md  api.rst  conf.py  hv_controller_api.md  includeme.rst  index.rst  tx_device_api.md
docs/_templates/: custom-class-template.rst
examples/legacy/: demo.py  test_nifti.py  test_nucleo.py  test_simulation.py  test_tx_dfu.py  test_vmon.py  test_watertank.py
examples/tools/: standardize_database.py
examples/trash/: OpenLIFU_2x_1.json  pinmap.json  run_self_test.py  single_pulse.py  stress_test.py  test_console2.py  test_console_dfu.py  test_multiple_modules.py  test_pwr.py  test_reset.py  test_solution.py  test_temp.py  test_ti_cfg.py  test_toggle_12v.py  test_transmitter.py  test_tx_dfu.py  test_updated_if.py  test_updated_pwr.py  test_watertank.py  test_watertank_simulation.py
examples/tutorials/: 01_Introduction_And_Object_Creation.py  02_Database_Interaction.py  03_Solution_Generation_and_Analysis.py
examples/verification/: tst01_console_selftest.py  tst02_txmodule_selftest.py  tst04_console_HV.py  tst05_thermal_stress.py  tst06_2x_burn_in.py  tst06_burn_in.py
gui/: slicerInterface.py  testSlicer.py
mappings/: M3.json
notebooks/: 01_Introduction_And_Object_Creation.py  02_Database_Interaction.py  03_Solution_Generation_and_Analysis.py  04_Connecting_to_Hardware.py  05_Solution_to_Hardware_Basic.py  06_Hardware_Console_Controls.py  07_Hardware_Transmitter_Controls.py  08_Hardware_DFU_Mode.py  09_Watertank_Continuous_Operation.py  10_Advanced_Focal_Patterns.py  11_Advanced_Apodization.py  11_Async_Operations_and_Callbacks.py  12_Async_Operations_and_Callbacks.py  12_Exporting_Simulation_to_NIFTI.py  13_Exporting_Simulation_to_NIFTI.py  DemoApplication.py  Demo_Notebook.py  LIFUTestWidget.py  README.md  atr_test.py  burn_in_test.py  calibrate_supply_dmm.py  demo.py  no_console_test.py  noisegen.py  pinmap.json  run_self_test.py  stress_test.py  tempCodeRunnerFile.py  test_all_in_one.py  test_async.py  test_async_mode.py  test_comms.ipynb  test_comms.py  test_console.py  test_console_dfu.py  test_first.ipynb  test_first.py  test_gridweights.ipynb  test_hardware.py  (+30 more)
ow_ustx/: afe_if.py  async_serial.py  config.py  core.py  ctrl_if.py  i2c_status_packet.py  tx7332_if.py  utils.py
pyfus/: __init__.py  bf.py  bf_old.py  database.py  foo.py  geo.py  plan.py  sim.py  xdc.py
pyfus/beamforming/: sequence.py
pyfus/beamforming/apod_methods/: __init__.py  apodmethod.py  maxangle.py  piecewiselinear.py  uniform.py
pyfus/beamforming/delay_methods/: delaymethod.py  direct.py
pyfus/beamforming/focal_patterns/: focal_pattern.py  single.py  wheel.py
pyfus/bf/: __init__.py  sequence.py
pyfus/bf/apod_methods/: apodmethod.py  maxangle.py  piecewiselinear.py  uniform.py
pyfus/bf/delay_methods/: __init__.py  delaymethod.py  direct.py
pyfus/bf/focal_patterns/: focal_pattern.py  single.py  wheel.py
pyfus/db/: __init__.py  database.py  session.py
pyfus/io/: __init__.py  tx7332.py  ustx.py
pyfus/io/ustx/: __init__.py  afe_if.py  config.py  ctrl_if.py  ustx.py  utils.py
pyfus/materials/: __init__.py  material.py
pyfus/plan/: __init__.py  protocol.py
pyfus/planning/: __init__.py  plan.py  solution.py
pyfus/seg/: material.py
pyfus/seg/seg_methods/: __init__.py  seg_method.py  segment_mri.py
pyfus/sim/: __init__.py  kwave.py  sim_setup.py
pyfus/util/: json.py  units.py
pyfus/xdc/: element.py  transducer.py
scripts/: standardize_database.py
src/openlifu/: __init__.py  geo.py  photoscan.py  virtual_fit.py
src/openlifu/bf/: __init__.py  calc_dist_from_focus.py  get_beamwidth.py  get_focus_matrix.py  mask_focus.py  offset_grid.py  pulse.py  sequence.py
src/openlifu/cloud/: cloud.py  const.py  filesystem_observer.py  status.py  sync_thread.py  utils.py  ws.py
src/openlifu/db/: __init__.py  database.py  photoscan.py  photoscans.py  session.py  subject.py  user.py
src/openlifu/io/: LIFUConfig.py  LIFUDevice.py  LIFUHVController.py  LIFUInterface.py  LIFUSignal.py  LIFUTXDevice.py  LIFUUart.py  __init__.py  afe_if.py  async_serial.py  config.py  core.py  crc16.py  ctrl_if.py  i2c_data_packet.py  i2c_status_packet.py  pwr_if.py  tx7332_if.py  uartpacket.py  ustx.py  utils.py
src/openlifu/login/: user.py
test_notebooks/: test_comms.ipynb  test_duty_cycle.py  test_first.ipynb  test_gridweights.ipynb  test_nifti.ipynb  test_plan.ipynb  test_profiles.py  test_registers.ipynb  test_tx7332.ipynb  test_txmodule.ipynb
tests/: helpers.py  test_apod_methods.py  test_assets.py  test_database.py  test_geo.py  test_io.py  test_mask_focus.py  test_material.py  test_offset_grid.py  test_package.py  test_param_constraints.py  test_photoscans.py  test_point.py  test_protocol.py  test_run.py  test_seg_method.py  test_sequence.py  test_session.py  test_sim.py  test_skinseg.py  test_solution.py  test_solution_analysis.py  test_sonication_control_mock.py  test_transducer.py  test_units.py  test_user.py  test_virtual_fit.py  test_volume_conversion.py
(+150 files in other folders)
