[project]
name = "openlifu"
version = "0.1.0"
description = "Openwater Focused Ultrasound Toolkit"
dependencies = [
    "xarray",
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
    "vtk",
    "h5py",
    "opencv-contrib-python",
    "crc",
    "nibabel",
    "sphinx",
    "ipykernel"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["src/openlifu*"]
exclude = ["test*", "env*"]